l4/2 - finish hireme setup

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,25 @@
+/* Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Barlow:wght@300&family=PT+Serif&family=Scope+One&display=swap');
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Assistant', sans-serif;
+  font-family: 'Barlow', sans-serif;
+  font-family: 'PT Serif', serif;
+  font-family: 'Scope One', serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+main {
+  padding: 25px;
+}
+
+.navbar-dark {
+  background-color: #DB0007;
+}
+
+h1 {
+  color: #063672;
 }
