--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="/employers">Employers</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/cities/create">Cities</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Register</a>
                 </li>
                 <li class="nav-item">
