--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,10 @@
     <!-- Bootstrap & jQuery Scripts -->
     <script src="/javascripts/bootstrap.min.js" defer></script>
     <script src="/javascripts/jquery.min.js" defer></script>
+    <script src="/javascripts/scripts.js" defer></script>
+
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <!-- sample Navbar: https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp -->
