--- a/views/employers/index.hbs
+++ b/views/employers/index.hbs
@@ -22,9 +22,7 @@
                 </td>
                 <td>{{this.employees}}</td>
                 <td class="text-center">
-                    <a href="/employers/edit/{{this._id}}" title="Edit">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                    </a>
+                    <a href="/employers/edit/{{this._id}}" title="Edit"><i class="fa-solid fa-pen-to-square"></i></a>
                     <a href="/employers/delete/{{this._id}}" title="Delete" onclick="return confirmDelete();">
                         <i class="fa-solid fa-trash-can"></i>
                     </a>                
