--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,11 +45,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/cities/create">Cities</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="/auth/register">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="/auth/login">Login</a>
                     </li>
                 </ul>
             </div>
