--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,5 +1,9 @@
 <h1>Register</h1>
-
+{{#if messages}}
+    <p class="alert alert-danger">We could not complete your Registration</p>        
+{{else}}
+    <p class="alert alert-secondary">Please create your account</p>   
+{{/if}}
 <form method="post">
     <fieldset class="form-group">
         <label for="username" class="col-2 control-label">Username: *</label>
