--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,6 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/auth/login">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/logout">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
