--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 {{#if messages}}
-    <p class="alert alert-danger">We could not complete your Registration</p>        
+    <p class="alert alert-danger">{{messages}}</p>        
 {{else}}
     <p class="alert alert-secondary">Please create your account</p>   
 {{/if}}
@@ -12,13 +12,15 @@
     <fieldset class="form-group">
         <label for="password" class="col-2 control-label">Password: *</label>
         <input name="password" id="password" type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" />
+        <img src="/images/show.png" alt="Show/Hide" id="imgShowHide" onclick="showHide();" />
     </fieldset>
     <fieldset class="form-group">
         <label for="confirm" class="col-2 control-label">Confirm: *</label>
-        <input name="confirm" id="confirm" type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" />
+        <input name="confirm" id="confirm" type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" onkeyup="return comparePasswords();" />
+        <span id="pwMsg"></span>
     </fieldset>
     <fieldset class="form-group">
-        <button class="btn btn-secondary offset-2">Register</button>
+        <button class="btn btn-secondary offset-2" onclick="return comparePasswords();">Register</button>
         <hr />
         Already have an account? <a href="/auth/login" title="Login">Login</a>
     </fieldset>
