--- a/views/employers/index.hbs
+++ b/views/employers/index.hbs
@@ -1,12 +1,16 @@
 <h1>Employer List</h1>
-<a href="/employers/create">Add a New Employer</a>
+{{#if user}}
+    <a href="/employers/create">Add a New Employer</a>
+{{/if}}
 <table class="table table-striped table-hover">
     <thead>
         <th>Name</th>
         <th>City</th>
         <th>Email</th>
         <th># of Employees</th>
-        <th class="text-center">Actions</th>
+        {{#if user}}
+            <th class="text-center">Actions</th>
+        {{/if}}
     </thead>
     <tbody>
         {{#each employers}}
@@ -21,12 +25,14 @@
                     {{/if}}             
                 </td>
                 <td>{{this.employees}}</td>
-                <td class="text-center">
-                    <a href="/employers/edit/{{this._id}}" title="Edit"><i class="fa-solid fa-pen-to-square"></i></a>
-                    <a href="/employers/delete/{{this._id}}" title="Delete" onclick="return confirmDelete();">
-                        <i class="fa-solid fa-trash-can"></i>
-                    </a>                
-                </td>
+                {{#if ../user}}
+                    <td class="text-center">
+                        <a href="/employers/edit/{{this._id}}" title="Edit"><i class="fa-solid fa-pen-to-square"></i></a>
+                        <a href="/employers/delete/{{this._id}}" title="Delete" onclick="return confirmDelete();">
+                            <i class="fa-solid fa-trash-can"></i>
+                        </a>                
+                    </td>
+                {{/if}}
             </tr>
         {{/each}}
     </tbody>
