l8/3 - finish google auth

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -14,7 +14,10 @@
         <input name="password" id="password" type="password" required />
     </fieldset>
     <fieldset class="form-group">
-        <button class="btn btn-secondary offset-2">Login</button> <img src="/images/google.png" alt="Sign in with Google" />
+        <button class="btn btn-secondary offset-2">Login</button> 
+        <a href="/auth/google">
+            <img src="/images/google.png" alt="Sign in with Google" />
+        </a>
         <hr />
         Need an account? <a href="/auth/register" title="Register">Register</a>
     </fieldset>
