--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -21,6 +21,9 @@
     </fieldset>
     <fieldset class="form-group">
         <button class="btn btn-secondary offset-2" onclick="return comparePasswords();">Register</button>
+        <a href="/auth/google">
+            <img src="/images/google.png" alt="Sign in with Google" />
+        </a>
         <hr />
         Already have an account? <a href="/auth/login" title="Login">Login</a>
     </fieldset>
